tests/sksl/errors/ReservedNameTypedef.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'typedef'
1 error
